docs: update CLAUDE.md
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>